git feat 加入了配置文件初始化和底栏输出部分信息，后续需要调整的细节还有很多...，更新了部分打包配置